tutorials/08_become-familiar-with-kubernetes/edu-cluster/service.yaml
apiVersion: 'v1'
kind: 'Service'
metadata:
  name: 'etherpad-service'
spec:
  selector:
    app: 'etherpad'
  ports:
  - protocol: TCP
    name: 'http'
    port: 80
    targetPort: 8080
  type: 'ClusterIP'
