tutorials/08_become-familiar-with-kubernetes/edu-cluster/ingress.yaml
apiVersion: 'networking.k8s.io/v1'
kind: 'Ingress'
metadata:
  name: 'webservice-ingress'
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
  - host: ${NAME}.lehre.ris.bht-berlin.de
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: webservice-service
            port:
              number: 80
